syntax = "proto3";

package ru.practicum.ewm.stats.proto;

// Импортируем well-known type для Timestamp
import "google/protobuf/timestamp.proto";

// Запросы
message UserPredictionsRequestProto {
  int64 user_id = 1;
  int32 max_results = 2;
}

message SimilarEventsRequestProto {
  int64 event_id = 1;
  int64 user_id = 2;
  int32 max_results = 3;
}

message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}

// Ответ
message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}